[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earth-database"
version = "0.1.0"
description = "Local embedded memory system with observable layers and exact/provenance-first retrieval"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
earth-database = "earth_database.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]
